# Navigation-Algorithms

./: README.md
iterative_closest_point/: CMakeLists.txt  main.cpp
iterative_closest_point/data/input_data/: absor.m  example_dat.txt  generate_data.m  iterative_closest_point_data_15-Aug-2024.txt  iterative_closest_point_data_17-Aug-2024.txt  iterative_closest_point_matlab_15-Aug-2024.mat  iterative_closest_point_matlab_17-Aug-2024.mat
iterative_closest_point/include/: iterative_closest_point_helper.hpp
iterative_closest_point/src/: iterative_closest_point_helper.cpp
